# serializer version: 1
# name: TestTraceQueryRunner.test_event_property_filters
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT ai_events.uuid AS uuid,
               ai_events.event AS event,
               toTimeZone(ai_events.timestamp, 'UTC') AS timestamp,
               ai_events.distinct_id AS distinct_id,
               ai_events.properties AS properties,
               ai_events.trace_id AS trace_id,
               ai_events.session_id AS session_id,
               ai_events.parent_id AS parent_id,
               ai_events.span_id AS span_id,
               ai_events.generation_id AS generation_id,
               ai_events.span_name AS span_name,
               ai_events.trace_name AS trace_name,
               ai_events.latency AS latency,
               ai_events.input_tokens AS input_tokens,
               ai_events.output_tokens AS output_tokens,
               ai_events.input_cost_usd AS input_cost_usd,
               ai_events.output_cost_usd AS output_cost_usd,
               ai_events.total_cost_usd AS total_cost_usd,
               ai_events.input AS input,
               ai_events.output AS output,
               ai_events.output_choices AS output_choices,
               ai_events.input_state AS input_state,
               ai_events.output_state AS output_state,
               ai_events.tools AS tools,
               coalesce(nullIf(ai_events.generation_id, ''), nullIf(ai_events.span_id, ''), toString(ai_events.uuid)) AS node_key
        FROM ai_events
        WHERE and(equals(ai_events.team_id, 99999), in(ai_events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(equals(ai_events.trace_id, 'trace1'), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(ai_events.properties, 'foo'), ''), 'null'), '^"|"$', ''), 'bar'), 0)))
        LIMIT 1 BY ai_events.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestTraceQueryRunner.test_event_property_filters.1
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT ai_events.uuid AS uuid,
               ai_events.event AS event,
               toTimeZone(ai_events.timestamp, 'UTC') AS timestamp,
               ai_events.distinct_id AS distinct_id,
               ai_events.properties AS properties,
               ai_events.trace_id AS trace_id,
               ai_events.session_id AS session_id,
               ai_events.parent_id AS parent_id,
               ai_events.span_id AS span_id,
               ai_events.generation_id AS generation_id,
               ai_events.span_name AS span_name,
               ai_events.trace_name AS trace_name,
               ai_events.latency AS latency,
               ai_events.input_tokens AS input_tokens,
               ai_events.output_tokens AS output_tokens,
               ai_events.input_cost_usd AS input_cost_usd,
               ai_events.output_cost_usd AS output_cost_usd,
               ai_events.total_cost_usd AS total_cost_usd,
               ai_events.input AS input,
               ai_events.output AS output,
               ai_events.output_choices AS output_choices,
               ai_events.input_state AS input_state,
               ai_events.output_state AS output_state,
               ai_events.tools AS tools,
               coalesce(nullIf(ai_events.generation_id, ''), nullIf(ai_events.span_id, ''), toString(ai_events.uuid)) AS node_key
        FROM ai_events
        WHERE and(equals(ai_events.team_id, 99999), in(ai_events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(equals(ai_events.trace_id, 'trace1'), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(ai_events.properties, 'foo'), ''), 'null'), '^"|"$', ''), 'baz'), 0)))
        LIMIT 1 BY ai_events.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestTraceQueryRunner.test_event_property_filters.2
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT ai_events.uuid AS uuid,
               ai_events.event AS event,
               toTimeZone(ai_events.timestamp, 'UTC') AS timestamp,
               ai_events.distinct_id AS distinct_id,
               ai_events.properties AS properties,
               ai_events.trace_id AS trace_id,
               ai_events.session_id AS session_id,
               ai_events.parent_id AS parent_id,
               ai_events.span_id AS span_id,
               ai_events.generation_id AS generation_id,
               ai_events.span_name AS span_name,
               ai_events.trace_name AS trace_name,
               ai_events.latency AS latency,
               ai_events.input_tokens AS input_tokens,
               ai_events.output_tokens AS output_tokens,
               ai_events.input_cost_usd AS input_cost_usd,
               ai_events.output_cost_usd AS output_cost_usd,
               ai_events.total_cost_usd AS total_cost_usd,
               ai_events.input AS input,
               ai_events.output AS output,
               ai_events.output_choices AS output_choices,
               ai_events.input_state AS input_state,
               ai_events.output_state AS output_state,
               ai_events.tools AS tools,
               coalesce(nullIf(ai_events.generation_id, ''), nullIf(ai_events.span_id, ''), toString(ai_events.uuid)) AS node_key
        FROM ai_events
        WHERE and(equals(ai_events.team_id, 99999), in(ai_events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(equals(ai_events.trace_id, 'trace1'), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(ai_events.properties, 'foo'), ''), 'null'), '^"|"$', ''), 'barz'), 0)))
        LIMIT 1 BY ai_events.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestTraceQueryRunner.test_event_property_filters.3
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT __ai_events_fallback.uuid AS uuid,
               __ai_events_fallback.event AS event,
               toTimeZone(__ai_events_fallback.timestamp, 'UTC') AS timestamp,
               __ai_events_fallback.distinct_id AS distinct_id,
               __ai_events_fallback.properties AS properties,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_trace_id'), ''), 'null'), '^"|"$', '') AS trace_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_session_id'), ''), 'null'), '^"|"$', '') AS session_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_parent_id'), ''), 'null'), '^"|"$', '') AS parent_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_span_id'), ''), 'null'), '^"|"$', '') AS span_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_generation_id'), ''), 'null'), '^"|"$', '') AS generation_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_span_name'), ''), 'null'), '^"|"$', '') AS span_name,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_trace_name'), ''), 'null'), '^"|"$', '') AS trace_name,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_latency'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS latency,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_input_tokens'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS input_tokens,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_tokens'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS output_tokens,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_input_cost_usd'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS input_cost_usd,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_cost_usd'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS output_cost_usd,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_total_cost_usd'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS total_cost_usd,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_input') AS input,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_output') AS output,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_choices') AS output_choices,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_input_state') AS input_state,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_state') AS output_state,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_tools') AS tools,
               coalesce(nullIf(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_generation_id'), ''), 'null'), '^"|"$', ''), ''), nullIf(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_span_id'), ''), 'null'), '^"|"$', ''), ''), toString(__ai_events_fallback.uuid)) AS node_key
        FROM events AS __ai_events_fallback
        WHERE and(equals(__ai_events_fallback.team_id, 99999), in(__ai_events_fallback.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(greaterOrEquals(__ai_events_fallback.timestamp, assumeNotNull(toDateTime('2024-11-30 23:50:00', 'UTC'))), lessOrEquals(__ai_events_fallback.timestamp, assumeNotNull(toDateTime('2024-12-08 00:10:00', 'UTC'))), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_trace_id'), ''), 'null'), '^"|"$', ''), 'trace1'), 0), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, 'foo'), ''), 'null'), '^"|"$', ''), 'barz'), 0)))
        LIMIT 1 BY __ai_events_fallback.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestTraceQueryRunner.test_person_property_filters
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT ai_events.uuid AS uuid,
               ai_events.event AS event,
               toTimeZone(ai_events.timestamp, 'UTC') AS timestamp,
               ai_events.distinct_id AS distinct_id,
               ai_events.properties AS properties,
               ai_events.trace_id AS trace_id,
               ai_events.session_id AS session_id,
               ai_events.parent_id AS parent_id,
               ai_events.span_id AS span_id,
               ai_events.generation_id AS generation_id,
               ai_events.span_name AS span_name,
               ai_events.trace_name AS trace_name,
               ai_events.latency AS latency,
               ai_events.input_tokens AS input_tokens,
               ai_events.output_tokens AS output_tokens,
               ai_events.input_cost_usd AS input_cost_usd,
               ai_events.output_cost_usd AS output_cost_usd,
               ai_events.total_cost_usd AS total_cost_usd,
               ai_events.input AS input,
               ai_events.output AS output,
               ai_events.output_choices AS output_choices,
               ai_events.input_state AS input_state,
               ai_events.output_state AS output_state,
               ai_events.tools AS tools,
               coalesce(nullIf(ai_events.generation_id, ''), nullIf(ai_events.span_id, ''), toString(ai_events.uuid)) AS node_key
        FROM ai_events
        INNER JOIN
          (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS ai_events__pdi___person_id,
                  argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                  person_distinct_id2.distinct_id AS distinct_id
           FROM person_distinct_id2
           WHERE equals(person_distinct_id2.team_id, 99999)
           GROUP BY person_distinct_id2.distinct_id
           HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS ai_events__pdi ON equals(ai_events.distinct_id, ai_events__pdi.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'bar'), ''), 'null'), '^"|"$', '') AS properties___bar
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS ai_events__pdi__person ON equals(ai_events__pdi.ai_events__pdi___person_id, ai_events__pdi__person.id)
        WHERE and(equals(ai_events.team_id, 99999), in(ai_events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(equals(ai_events.trace_id, 'trace1'), ifNull(equals(ai_events__pdi__person.properties___bar, 'baz'), 0)))
        LIMIT 1 BY ai_events.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestTraceQueryRunner.test_person_property_filters.1
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT ai_events.uuid AS uuid,
               ai_events.event AS event,
               toTimeZone(ai_events.timestamp, 'UTC') AS timestamp,
               ai_events.distinct_id AS distinct_id,
               ai_events.properties AS properties,
               ai_events.trace_id AS trace_id,
               ai_events.session_id AS session_id,
               ai_events.parent_id AS parent_id,
               ai_events.span_id AS span_id,
               ai_events.generation_id AS generation_id,
               ai_events.span_name AS span_name,
               ai_events.trace_name AS trace_name,
               ai_events.latency AS latency,
               ai_events.input_tokens AS input_tokens,
               ai_events.output_tokens AS output_tokens,
               ai_events.input_cost_usd AS input_cost_usd,
               ai_events.output_cost_usd AS output_cost_usd,
               ai_events.total_cost_usd AS total_cost_usd,
               ai_events.input AS input,
               ai_events.output AS output,
               ai_events.output_choices AS output_choices,
               ai_events.input_state AS input_state,
               ai_events.output_state AS output_state,
               ai_events.tools AS tools,
               coalesce(nullIf(ai_events.generation_id, ''), nullIf(ai_events.span_id, ''), toString(ai_events.uuid)) AS node_key
        FROM ai_events
        INNER JOIN
          (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS ai_events__pdi___person_id,
                  argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                  person_distinct_id2.distinct_id AS distinct_id
           FROM person_distinct_id2
           WHERE equals(person_distinct_id2.team_id, 99999)
           GROUP BY person_distinct_id2.distinct_id
           HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS ai_events__pdi ON equals(ai_events.distinct_id, ai_events__pdi.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'bar'), ''), 'null'), '^"|"$', '') AS properties___bar
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS ai_events__pdi__person ON equals(ai_events__pdi.ai_events__pdi___person_id, ai_events__pdi__person.id)
        WHERE and(equals(ai_events.team_id, 99999), in(ai_events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(equals(ai_events.trace_id, 'trace1'), ifNull(equals(ai_events__pdi__person.properties___bar, 'foo'), 0)))
        LIMIT 1 BY ai_events.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestTraceQueryRunner.test_person_property_filters.2
  '''
  SELECT aggregated.trace_id AS id,
         aggregated.session_id AS ai_session_id,
         aggregated.first_timestamp AS first_timestamp,
         aggregated.last_timestamp AS last_timestamp,
         aggregated.first_distinct_id AS first_distinct_id,
         round(coalesce(nullIf(aggregated.max_trace_latency, 0), if(and(equals(aggregated.non_generation_latency_count, 0), greater(aggregated.generation_latency_count, 0)), aggregated.generation_latency_sum, arraySum(x -> x.1, arrayFilter(x -> or(isNull(x.2), ifNull(equals(x.2, ''), 0), ifNull(equals(x.2, aggregated.trace_id), isNull(x.2)
                                                                                                                                                                                                                                                                                                        and isNull(aggregated.trace_id)), ifNull(equals(x.2, x.3), isNull(x.2)
                                                                                                                                                                                                                                                                                                                                                 and isNull(x.3)), not(has(aggregated.known_span_ids, x.2))), aggregated.latency_rows)))), 2) AS total_latency,
         aggregated.input_tokens AS input_tokens,
         aggregated.output_tokens AS output_tokens,
         aggregated.input_cost AS input_cost,
         aggregated.output_cost AS output_cost,
         aggregated.total_cost AS total_cost,
         aggregated.events AS events,
         aggregated.input_state AS input_state,
         aggregated.output_state AS output_state,
         aggregated.trace_name AS trace_name
  FROM
    (SELECT events.trace_id AS trace_id,
            any(events.session_id) AS session_id,
            min(events.timestamp) AS first_timestamp,
            max(events.timestamp) AS last_timestamp,
            ifNull(nullIf(argMinIf(events.distinct_id, events.timestamp, equals(events.event, '$ai_trace')), ''), argMin(events.distinct_id, events.timestamp)) AS first_distinct_id,
            maxIf(events.latency, and(equals(events.event, '$ai_trace'), ifNull(greater(events.latency, 0), 0))) AS max_trace_latency,
            countIf(and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_generation'))) AS non_generation_latency_count,
            countIf(and(ifNull(greater(events.latency, 0), 0), equals(events.event, '$ai_generation'))) AS generation_latency_count,
            sumIf(events.latency, and(equals(events.event, '$ai_generation'), ifNull(greater(events.latency, 0), 0))) AS generation_latency_sum,
            groupUniqArrayIf(events.node_key, in(events.event, tuple('$ai_span', '$ai_generation', '$ai_embedding'))) AS known_span_ids,
            groupArrayIf(tuple(ifNull(events.latency, 0), events.parent_id, events.node_key), and(ifNull(greater(events.latency, 0), 0), notEquals(events.event, '$ai_trace'))) AS latency_rows,
            if(greater(countIf(and(isNotNull(events.input_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.input_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS input_tokens,
            if(greater(countIf(and(isNotNull(events.output_tokens), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), sumIf(events.output_tokens, in(events.event, tuple('$ai_generation', '$ai_embedding'))), NULL) AS output_tokens,
            if(greater(countIf(and(isNotNull(events.input_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.input_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS input_cost,
            if(greater(countIf(and(isNotNull(events.output_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.output_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS output_cost,
            if(greater(countIf(and(isNotNull(events.total_cost_usd), in(events.event, tuple('$ai_generation', '$ai_embedding')))), 0), round(sumIf(events.total_cost_usd, in(events.event, tuple('$ai_generation', '$ai_embedding'))), 10), NULL) AS total_cost,
            arrayDistinct(arraySort(x -> x.3, groupArrayIf(tuple(events.uuid, events.event, events.timestamp, events.properties, events.input, events.output, events.output_choices, events.input_state, events.output_state, events.tools), notEquals(events.event, '$ai_trace')))) AS events,
            argMinIf(events.input_state, events.timestamp, equals(events.event, '$ai_trace')) AS input_state,
            argMinIf(events.output_state, events.timestamp, equals(events.event, '$ai_trace')) AS output_state,
            ifNull(argMinIf(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp, equals(events.event, '$ai_trace')), argMin(ifNull(nullIf(events.span_name, ''), nullIf(events.trace_name, '')), events.timestamp)) AS trace_name
     FROM
       (SELECT __ai_events_fallback.uuid AS uuid,
               __ai_events_fallback.event AS event,
               toTimeZone(__ai_events_fallback.timestamp, 'UTC') AS timestamp,
               __ai_events_fallback.distinct_id AS distinct_id,
               __ai_events_fallback.properties AS properties,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_trace_id'), ''), 'null'), '^"|"$', '') AS trace_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_session_id'), ''), 'null'), '^"|"$', '') AS session_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_parent_id'), ''), 'null'), '^"|"$', '') AS parent_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_span_id'), ''), 'null'), '^"|"$', '') AS span_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_generation_id'), ''), 'null'), '^"|"$', '') AS generation_id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_span_name'), ''), 'null'), '^"|"$', '') AS span_name,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_trace_name'), ''), 'null'), '^"|"$', '') AS trace_name,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_latency'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS latency,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_input_tokens'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS input_tokens,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_tokens'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS output_tokens,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_input_cost_usd'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS input_cost_usd,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_cost_usd'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS output_cost_usd,
               accurateCastOrNull(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_total_cost_usd'), ''), 'null'), '^"|"$', ''), 'Float64'), 'Float64') AS total_cost_usd,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_input') AS input,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_output') AS output,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_choices') AS output_choices,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_input_state') AS input_state,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_output_state') AS output_state,
               JSONExtractRaw(__ai_events_fallback.properties, '$ai_tools') AS tools,
               coalesce(nullIf(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_generation_id'), ''), 'null'), '^"|"$', ''), ''), nullIf(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_span_id'), ''), 'null'), '^"|"$', ''), ''), toString(__ai_events_fallback.uuid)) AS node_key
        FROM events AS __ai_events_fallback
        WHERE and(equals(__ai_events_fallback.team_id, 99999), in(__ai_events_fallback.event, tuple('$ai_span', '$ai_generation', '$ai_embedding', '$ai_metric', '$ai_feedback', '$ai_trace')), and(greaterOrEquals(__ai_events_fallback.timestamp, assumeNotNull(toDateTime('2024-11-30 23:50:00', 'UTC'))), lessOrEquals(__ai_events_fallback.timestamp, assumeNotNull(toDateTime('2024-12-08 00:10:00', 'UTC'))), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.properties, '$ai_trace_id'), ''), 'null'), '^"|"$', ''), 'trace1'), 0), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(__ai_events_fallback.person_properties, 'bar'), ''), 'null'), '^"|"$', ''), 'foo'), 0)))
        LIMIT 1 BY __ai_events_fallback.uuid) AS events
     GROUP BY events.trace_id) AS aggregated
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
